# STLSoft-1.9

./: .gitignore  AUTHORS.md  AUTHORS.txt  CHANGES.txt  CMakeLists.txt  FAQ.md  FAQ.txt  HISTORY.md  HISTORY.txt  HOW_YOU_CAN_HELP.md  HOW_YOU_CAN_HELP.txt  INSTALL.md  INSTALL.txt  KNOWN_ISSUES.md  LICENSE  NEWS.md  NEWS.txt  README.md  README.txt  TODO.md  TODO.txt
include/acestl/: acestl.hpp
include/acestl/collections/: message_queue_sequence.hpp
include/acestl/memory/: message_block_functions.hpp
include/acestl/network/: socket_functions.hpp
include/acestl/reactor/: custom_event_handler.hpp
include/atlstl/: atlstl.hpp
include/atlstl/automation/: automation_collections.hpp  enumerators.hpp  multiple_dispatch.hpp  property_method_helpers.hpp
include/atlstl/error/: support_error_info.hpp
include/atlstl/string/: ccombstr_veneer.hpp  string_traits.hpp
include/atlstl/util/: module_scope.hpp
include/atlstl/window/: about_dialog.hpp  enhanced_window.hpp  window.hpp
include/comstl/: comstl.h
include/comstl/collections/: collection_sequence.hpp  enumeration_policies.hpp  enumerator_sequence.hpp  safearray_sequence.hpp
include/comstl/conversion/: interface_cast.hpp  method_cast.hpp
include/comstl/error/: bad_interface_cast.hpp  errorinfo_desc.hpp  errorinfo_functions.h  excepinfo_functions.h  exceptions.hpp
include/comstl/functional/: com_predicate_adaptors.hpp  functionals.hpp  interface_functionals.hpp  type_functionals.hpp
include/comstl/interface/: bad_interface_cast.hpp  interface_cast.hpp  interface_traits.hpp
include/comstl/internal/: interface_traits_std.hpp
include/comstl/memory/: functions.h  task_allocator.hpp
include/comstl/security/: security_initialisers.hpp
include/comstl/smartptr/: interface_ptr.hpp
include/comstl/speech/: sapi_util.hpp
include/comstl/string/: BSTR_functions.h  bstr.hpp  olestring_functions.h
include/comstl/util/: CY_functions.h  DECIMAL_functions.h  VARIANT_functions.h  acyclic_connector.hpp  creation_functions.hpp  guid.hpp  initialisers.hpp  interface_traits.hpp  object_functions.h  refcount_functions.h  rot_functions.h  stream_functions.h  thread_marshal.hpp  value_policies.hpp  variant.hpp
include/dotnetstl/: dotnetstl.hpp
include/dotnetstl/collections/: object_enumerators.hpp
include/dotnetstl/conversion/: check_cast.hpp
include/dotnetstl/string/: string_accessor.hpp
include/dotnetstl/util/: dispose_functions.hpp
include/inetstl/: inetstl.h
include/inetstl/error/: exceptions.hpp
include/inetstl/filesystem/: filesystem_traits.hpp  findfile_sequence.hpp  ftpdir_sequence.hpp  functionals.hpp  searchspec_sequence.hpp
include/inetstl/network/: connection.hpp  session.hpp
include/mfcstl/: mfcstl.hpp
include/mfcstl/collections/: carray_adaptors.hpp  carray_swap.hpp  carray_traits.hpp  clist_adaptors.hpp  clist_swap.hpp  clist_traits.hpp  cstring_adaptors.hpp
include/mfcstl/memory/: afx_allocator.hpp
include/mfcstl/string/: grab_cstring_buffer.hpp  resource_string.hpp  string_traits.hpp
include/mfcstl/util/: memory_exception_translation_policies.hpp
include/platformstl/: platformstl.h  platformstl.hpp
include/platformstl/dl/: module.hpp
include/platformstl/error/: error_desc.hpp  exceptions.hpp
include/platformstl/filesystem/: current_directory.hpp  current_directory_scope.hpp  cwd_stack.hpp  directory_functions.hpp  file_lines.hpp  file_path_buffer.hpp  filesystem_traits.hpp  memory_mapped_file.hpp  path.hpp  path_functions.hpp  pipe.hpp  readdir_sequence.hpp
include/platformstl/performance/: performance_counter.hpp  processtimes_counter.hpp
include/platformstl/synch/: atomic_functions.h  atomic_types.h  process_mutex.hpp  semaphore.hpp  sleep_functions.h  spin_mutex.hpp  thread_mutex.hpp  tss_index.hpp
include/platformstl/system/: console_functions.h  environment_map.hpp  environment_variable_traits.hpp  system_traits.hpp
include/rangelib/: algorithms.hpp  associative_range.hpp  basic_indirect_range_adaptor.hpp  cstring_range.hpp  exceptions.hpp  filtered_range.hpp  filtered_sequence.hpp  indexed_range.hpp  integral_range.hpp  iterator_range.hpp  operator_adaptors.hpp  random_range.hpp  range_categories.hpp  rangelib.hpp  salgorithms.hpp  sequence_range.hpp
include/rangelib/error/: exceptions.hpp
include/stlsoft/: algorithms.hpp  stlsoft.h
include/stlsoft/algorithms/: bounded.hpp  collection.hpp  debug.hpp  deprecated.hpp  pod.hpp  unordered.hpp
include/unixstl/: unixstl.h
include/winstl/: winstl.h
include/wtlstl/: wtlstl.hpp
(+521 files in other folders)
